Adding a footer to html page

--- a/Configuration/template.html
+++ b/Configuration/template.html
@@ -348,7 +348,7 @@ p {
 {{skipadapter_e}}
 
 </div>
-<div class="footer">Footer here
+<div class="footer">Falco 0.1.0
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
