tile heatmap y axis viewed as categorical, not numerical

--- a/Configuration/template.html
+++ b/Configuration/template.html
@@ -401,7 +401,7 @@ if (document.getElementById('tilequalityheatmap') !== null) {
     margin: { t: 0 }, 
     showlegend: false,
     xaxis : {title : 'Base position'},
-    yaxis : {title : 'tile'} 
+    yaxis : {title : 'tile', type: 'category'} 
   });
 }
 
